2009-06-24       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-min/libc.def:  added definition for printf.
	* gm2/examples/min/Makefile:  new file.
	* gm2/examples/min/minhello.mod:  new file.

2009-06-15       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  SRawIO.mod added to list of ISO modules
	  to be built and installed.
	* gm2/gm2-libs-iso/SRawIO.mod:  (new file).
	* gm2/m2.flex:  detect PACKEDSET keyword.
	* gm2/gm2m.bnf:  added PACKEDSET keyword.
	* gm2/gm2l.bnf:  added PACKEDSET keyword.
	* gm2/m2.bnf:  added PACKEDSET keyword.
	* gm2/m2-2.bnf:  added PACKEDSET keyword.
	* gm2/m2-3.bnf:  added PACKEDSET keyword.
	* gm2/m2-h.bnf:  added PACKEDSET keyword.
	* gm2/gm2-compiler/M2Reserved.def:  define packedsettok.
	* gm2/gm2-compiler/M2Reserved.mod:  define PackedSetTok
	  and ensure that it corresponds to packedsettok.
	* gm2/gm2-libs/FIO.def:  IsActive (new procedure function).
	* gm2/gm2-libs/FIO.mod:  IsActive (implement procedure
	  function).
	* gm2/gm2-libs-iso/RTfio.mod:  ensure that the file
	  is still active before testing IsNoError.

2009-06-06       Gaius Mulley <gaius@gnu.org>

	* gm2/Makefile.in:  added rules to build the minimum libraries
	  by default.
	* gm2/gm2.texi:  documented -fno-exceptions.
	* gm2/lang-options.h:  new option -fno-exceptions.
	* gm2/lang.opt:  reorder flibs options alphabetically.
	* gm2/version.c:  revised the release number to 0.70 as
	  the basic ISO IO libraries are implemented.
	* gm2/gm2-compiler/M2Base.mod:  only import NoException from
	  RTExceptions if the exceptions flag is set.
	* gm2/gm2-compiler/M2Options.mod:  implemented new flag
          -fno-exceptions
	* gm2/gm2-compiler/M2Quads.mod:  test the Exceptions flag
	  to ensure that we only generate exception code if the
	  exceptions flag is on.
	* gm2/gm2-compiler/gm2lgen.mod:  only generate the cpp
	  start up file if exceptions are enabled, other produce
	  the start up file in C.
	* gm2/gm2-libs/RTExceptions.def:  corrected procedure