@@ -52,11 +52,9 @@ GM2CC = gm2cc
 XGM2_1 = ./xgm2
 XGM2BUILD1 = ./stage1/gm2  -g -gdwarf-2
 
-ifeq ($(OSTYPE),darwin)
-  ifeq ($(VENDOR),apple)
-    ifeq ($(MACHTYPE),i386)
-	XGM2BUILD1 = ./stage1/gm2 -g
-    endif
+ifeq ($(shell uname -s),Darwin)
+  ifeq ($(shell uname -m),i386)
+    XGM2BUILD1 = ./stage1/gm2 -g
   endif
 endif
 
